Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase01_04.out


Parse error on line 2:
...in(String[] d2) {		public String d3() {
----------------------^
Expecting '{', 'if', 'while', 'printLine', 'ID', 'int', 'boolean', '}'